--- a/HTML/malphite.html
+++ b/HTML/malphite.html
@@ -202,75 +202,75 @@
     <p>
         <strong>Shoes choices</strong>:
         <img
-            src="image/item picture/Ionian_Boots_of_Lucidity_item.webp"
+            src="/images\item picture\Ionian_Boots_of_Lucidity_item.webp"
             alt="shoes1"
         />
         or
         <img
-            src="images\item picture\Mercury%27s_Treads_item.webp"
+            src="/images/item picture/Mercury%27s_Treads_item.webp"
             alt="shoes2"
         />
         or
         <img
-            src="images\item picture\Plated_Steelcaps_item.webp"
+            src="/images/item picture\Plated_Steelcaps_item.webp"
             alt="s3"
         />
     </p>
     <p>
         <strong>Essential</strong>:
         <img
-            src="images\item picture\Sunfire_Aegis_item.webp"
+            src="/images\item picture\Sunfire_Aegis_item.webp"
             alt="e1"
         />
         <img
-            src="images\item picture\Frozen_Heart_item.webp"
+            src="/images\item picture\Frozen_Heart_item.webp"
             alt="e2"
         />
         <img
-            src="images\item picture\Iceborn_Gauntlet_item.webp"
+            src="/images\item picture\Iceborn_Gauntlet_item.webp"
             alt="e3"
         />
         <img
-            src="images\item picture\Jak2C_The_Protean_item.webp"
+            src="/images\item picture\Jak2C_The_Protean_item.webp"
             alt="e4"
         />
         <img
-            src="images\item picture\Abyssal_Mask_item.webp"
+            src="/images\item picture\Abyssal_Mask_item.webp"
             alt="e5"
         />
     </p>
     <p>
         <strong>Optional</strong>:
         <img
-            src="images\item picture\Unending_Despair_item.webp"
+            src="/images\item picture\Unending_Despair_item.webp"
             alt="o1"
         />
         <img
-            src="images\item picture\Randuin%27s_Omen_item.webp"
+            src="/images\item picture\Randuin%27s_Omen_item.webp"
             alt="o2"
         />
         <img
-            src="images\item picture\Kaenic_Rookern_item.webp"
+            src="/images\item picture\Kaenic_Rookern_item.webp"
             alt="o3"
         />
         <img
-            src="images\item picture\Force_of_Nature_item.webp"
+            src="/images\item picture\Force_of_Nature_item.webp"
             alt="o4"
         />
         <img
-            src="images\item picture\Hollow_Radiance_item.webp"
+            src="/images\item picture\Hollow_Radiance_item.webp"
             alt="o5"
         />
     </p>
     <p>
         <strong>Runes</strong>:
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/a/a3/Grasp_of_the_Undying_rune.png/revision/latest/scale-to-width-down/52?cb=20171126182107"
+            src="/images\runes icon\Grasp_of_the_Undying_rune - 副本.webp"
             alt="r1"
         />
         or
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/e/e5/Arcane_Comet_rune.png/revision/latest/scale-to-width-down/52?cb=20171126182011"
+            src="/images\runes icon\Arcane_Comet_rune - 副本 - 副本.webp"
             alt="r2"
         />
     </p>
@@ -280,66 +280,66 @@
     <p>
         <strong>Shoes choices</strong>:
         <img
-            src="images\item picture\Ionian_Boots_of_Lucidity_item.webp"
+            src="/images\item picture\Ionian_Boots_of_Lucidity_item.webp"
             alt="s1"
         />
         <img
-            src="images\item picture\Sorcerer%27s_Shoes_item.webp"
+            src="/images\item picture\Sorcerer%27s_Shoes_item.webp"
             alt="s2"
         />
     </p>
     <p>
         <strong>Essential</strong>:
         <img
-            src="images\item picture\Manamune_item.webp"
+            src="/images\item picture\Manamune_item.webp"
             alt="e1"
         />
         <img
-            src="images\item picture\Stormsurge_item.webp"
+            src="/images\item picture\Stormsurge_item.webp"
             alt="e2"
         />
         <img
-            src="images\item picture\Shadowflame_item.webp"
+            src="/images\item picture\Shadowflame_item.webp"
             alt="e3"
         />
         <img
-            src="images\item picture\Rabadon%27s_Deathcap_item.webp"
+            src="/images\item picture\Rabadon%27s_Deathcap_item.webp"
             alt="e4"
         />
         <img
-            src="images\item picture\Void_Staff_item.webp"
+            src="/images\item picture\Void_Staff_item.webp"
             alt="e5"
         />
     </p>
     <p>
         <strong>Optional</strong>:
         <img
-            src="images\item picture\Lich_Bane_item.webp"
+            src="/images\item picture\Lich_Bane_item.webp"
             alt="o1"
         />
         <img
-            src="images\item picture\Zhonya%27s_Hourglass_item.webp"
+            src="/images\item picture\Zhonya%27s_Hourglass_item.webp"
             alt="o1"
         />
         <img
-            src="images\item picture\Banshee's_Veil_item.webp"
+            src="/images\item picture\Banshee's_Veil_item.webp"
             alt="o3"
         />
     </p>
     <p>
         <strong>Runes</strong>:
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/1/12/First_Strike_rune.png/revision/latest/scale-to-width-down/52?cb=20211117134618"
+            src="/images\runes icon\First_Strike_rune - 副本 - 副本.webp"
             alt="r1"
         />
         or
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/e/e5/Arcane_Comet_rune.png/revision/latest/scale-to-width-down/52?cb=20171126182011"
+            src="/images\runes icon\Arcane_Comet_rune - 副本 - 副本.webp"
             alt="r2"
         />
         or
         <img
-            src="https://static.wikia.nocookie.net/leagueoflegends/images/0/0a/Electrocute_rune.png/revision/latest/scale-to-width-down/52?cb=20171126182032"
+            src="/images\runes icon\Electrocute_rune.webp"
             alt="r3"
         />
     </p>
