--- a/HTML/alista.html
+++ b/HTML/alista.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Alista</title>
+        <link rel="stylesheet" href="/CSS/guides.css" />
+        <link rel="images" href="/images/" />
+    </head>
+
 <h1 id="alistar-alista-https-static-wikia-nocookie-net-leagueoflegends-images-e-ee-alistar_originalsquare-png-revision-latest-scale-to-width-down-46-cb-20221122024814-">ALISTAR <img src="https://static.wikia.nocookie.net/leagueoflegends/images/e/ee/Alistar_OriginalSquare.png/revision/latest/scale-to-width-down/46?cb=20221122024814" alt="alista"></h1>
 <p>The tank class in League of Legends online battle consists of strong melee champions who sacrifice significant damage for robust crowd control, effectively breaking any group attacks—separating enemies from one another. Among them, Alistar is one of the most well-known, thanks to his robust disengaged gameplay. </p>
 <h1 id="abilities">Abilities</h1>
