--- a/HTML/about.html
+++ b/HTML/about.html
@@ -19,7 +19,12 @@
             </ul>
         </nav>
         <div class="background">
-            <img src="images/Victory.jpg" alt="" />
+            <video autoplay loop muted plays-inline class="back-video1">
+                <source
+                src="/images/League of Legends Honor Level 5 Live Wallpaper.mp4"
+                type="video/mp4"
+                /> 
+            </video>
         </div>
         <div class="main1">
             <h1>Who We Are</h1>
