--- a/HTML/malphite.html
+++ b/HTML/malphite.html
@@ -246,7 +246,7 @@
             alt="o1"
         />
         <img
-            src="/images\item picture\Randuin%27s_Omen_item.webp"
+            src="/images\item picture\Randuin_Omen_item.webp"
             alt="o2"
         />
         <img
