Updated guides.html / css

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -19,11 +19,23 @@
                     <li><a href="/HTML/about.html">ABOUT</a></li>
                 </ul>
             </nav>
-            <div class="main1">
-                <p>Daily news, updates, and patch notes</p>
-                <div class="line"></div>
-                <h1>Blog</h1>
+        </div>
+
+        <div class="main1">
+            <p>Up to date news, critiques, and patch notes</p>
+            <h1>Blog</h1>
+        </div>
+        <div class="divider">
+            <div class="dividerlinetop"></div>
+            <div class="dividericon">
+                <img src="/images/sgDividerIcon.png" />
             </div>
+            <div class="dividerlinebottom"></div>
+        </div>
+        <div class="popular-content">
+            <h2>Featured Articles</h2>
+            <h3>Below is a list of featured articles</h3>
+            <p>blah blah blah</p>
         </div>
     </body>
 </html>
