--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="/CSS/styles.css" />
+        <link rel="stylesheet" href="/CSS/guides.css" />
     </head>
     <body>
         <div class="header">
@@ -22,8 +22,23 @@
 
         <div class="main1">
             <p>Champion information, critics, and item selection</p>
-            <div class="line"></div>
             <h1>Guides</h1>
+        </div>
+        <div class="divider">
+            <div class="dividerlinetop"></div>
+            <div class="dividericon">
+                <img src="/images/sgDividerIcon.png" />
+            </div>
+            <div class="dividerlinebottom"></div>
+        </div>
+        <div class="popular-content">
+            <h2>League of Legends Champions</h2>
+            <h3>Find sophisticated guides for each champion</h3>
+
+            <ul>
+                <li><a href="alista.html" target="_blank">Alista</a></li>
+                <li><a href="malphite.html" target="_blank">Malphite</a></li>
+            </ul>
         </div>
     </body>
 </html>
