guide.html changes

--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -38,6 +38,7 @@
             <ul>
                 <li><a href="alista.html" target="_blank">Alista</a></li>
                 <li><a href="malphite.html" target="_blank">Malphite</a></li>
+                <li><a href="amumu.html" target="_blank">Amumu</a></li>
             </ul>
         </div>
     </body>
