--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -39,6 +39,7 @@
                 <li><a href="alista.html" target="_blank">Alista</a></li>
                 <li><a href="malphite.html" target="_blank">Malphite</a></li>
                 <li><a href="amumu.html" target="_blank">Amumu</a></li>
+                <li><a href="annie.html" target="_blank">Annie</a></li>
             </ul>
         </div>
     </body>
