--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -40,6 +40,7 @@
                 <li><a href="malphite.html" target="_blank">Malphite</a></li>
                 <li><a href="amumu.html" target="_blank">Amumu</a></li>
                 <li><a href="annie.html" target="_blank">Annie</a></li>
+                <li><a href="janna.html" target="_blank">Janna</a></li>
             </ul>
         </div>
     </body>
