--- a/HTML/about.html
+++ b/HTML/about.html
@@ -18,33 +18,42 @@
                 <li><a href="/HTML/about.html">ABOUT</a></li>
             </ul>
         </nav>
-        <div class="background">
-            <video autoplay loop muted plays-inline class="back-video1">
-                <source
-                src="/images/League of Legends Honor Level 5 Live Wallpaper.mp4"
-                type="video/mp4"
-                /> 
-            </video>
-        </div>
-        <div class="main1">
-            <h1>Who We Are</h1>
-            <p>By: Ricky, Adrian, Tienran</p>
-        </div>
+        <body>
+            <div class="background">
+                <video autoplay loop muted plays-inline class="back-video1">
+                    <source
+                    src="/images/League of Legends Honor Level 5 Live Wallpaper.mp4"
+                    type="video/mp4"
+                    /> 
+                </video>
+            </div>
+            <div class="main1">
+                <h1>Who We Are</h1>
+                <p>By: Ricky, Adrian, Tienran</p>
+            </div>
+            <div class="MainText">
+                <div>
+                <h5>Welcome to our community! We're a group of League of Legends enthusiasts dedicated to helping players of all
+                    levels improve, climb the ranks, and have more fun on Summoner's Rift. Whether you're a new player learning the
+                    basics or an experienced summoner aiming for the next tier, we're here to support you with resources, guides, and
+                    insights.</h5>
+                </div>  
+            </div>
+
+                <div class="textAreaColumn1">
+                    <div>
+                        <h4>Ricky Pham</h4>
+                        <h5>Content goes here</h5>
+                    </div>
+                    <div>
+                        <h4>Adrian Diaz</h4>
+                        <h5>Content goes here</h5>
+                    </div>
+                    <div>
+                        <h4>Tienran</h4>
+                        <h5>Content goes here</h5>
+                    </div>
+                </div>
+        </body>
     </div>
-    <body>
-        <div class="textAreaColumn">
-            <div>
-                <span>Ricky Pham</span>
-                <textarea>Content goes here</textarea>
-            </div>
-            <div>
-                <span>Adrian Diaz</span>
-                <textarea>Content goes here</textarea>
-            </div>
-            <div>
-                <span>Tienran </span>
-                <textarea>Content goes here</textarea>
-            </div>
-        </div>
-    </body>
 </html>
