--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -35,6 +35,13 @@
             <h2>League of Legends Champions</h2>
             <h3>Find sophisticated guides for each champion</h3>
 
+            <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <input type="text" placeholder="Search..">
+</div>
+
             <ul>
                 <li><a href="alista.html" target="_blank">Alista</a></li>
                 <li><a href="malphite.html" target="_blank">Malphite</a></li>
