--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -13,6 +13,9 @@
     </head>
     <body>
         <div class="header">
+            <video autoplay loop muted plays-inline class="back-video">
+                <source src="/images/starguardianvideo.webp" type="video/webp" />
+            </video>
             <nav>
                 <img src="/images/sgDividerIcon.png" class="logo" />
                 <ul>
@@ -40,18 +43,8 @@
             <h2>Articles</h2>
             <h3>Learn by Reading</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
-                aliquam quos excepturi, adipisci, consequatur necessitatibus
-                soluta tenetur fuga earum odio cumque optio tempore dignissimos
-                architecto ut, dolores praesentium laboriosam aut. Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Quod, quisquam
-                fugiat, exercitationem voluptates saepe deleniti dolorum quis
-                voluptatem omnis, minima ipsum ipsam molestias inventore cum in
-                aliquid dicta nisi doloribus! Lorem ipsum dolor sit, amet
-                consectetur adipisicing elit. Quo ipsam provident praesentium
-                quisquam odit inventore maiores, in nihil mollitia expedita
-                itaque hic, assumenda a quos corrupti repudiandae eligendi
-                laudantium facilis.
+                Written by our knowledgable staff, our articles aim to provide
+                an informative guide on the League of Legends universe.
             </p>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
