New blog background

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -14,7 +14,7 @@
     <body>
         <div class="header">
             <video autoplay loop muted plays-inline class="back-video">
-                <source src="/images/rankup.mp4" type="video/mp4" />
+                <source src="/images/StarGuardianIntro.mp4" type="video/mp4" />
             </video>
             <nav>
                 <img src="/images/sgDividerIcon.png" class="logo" />
