--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -46,6 +46,16 @@
                 <li><a href="amumu.html" target="_blank">Amumu</a></li>
                 <li><a href="annie.html" target="_blank">Annie</a></li>
                 <li><a href="janna.html" target="_blank">Janna</a></li>
+                <li><a href="jax.html" target="_blank">Jax</a></li>
+                <li><a href="kayle.html" target="_blank">Kayle</a></li>
+                <li><a href="master yi.html" target="_blank"><Master Yi/a></li>
+                <li><a href="nasus.html" target="_blank">Nasus</a></li>
+                <li><a href="ryze.html" target="_blank">Ryze</a></li>
+                <li><a href="soraka.html" target="_blank">Soraka</a></li>
+                    <li><a href="teemo.html" target="_blank">Teemo</a></li>
+                    <li><a href="tryndamere.html" target="_blank">Tryndamere</a></li>
+                    <li><a href="wukong.html" target="_blank">Wukong</a></li>
+                
             </ul>
         </div>
     </body>
