--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
                     >WATCH NOW</a
                 >
             </div>
-            <div>
-                <img src="images/eSportshome.jpg" alt="" />
-            </div>
+            <!--Background image div link used to be here-->
         </div>
         <div class="main3">
             <div class="row">
