--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -36,26 +36,26 @@
             <h3>Find sophisticated guides for each champion</h3>
 
             <div class="topnav">
-  
-  <input type="text" placeholder="Search..">
-</div>
+                <input type="text" placeholder="Search.." />
+            </div>
 
             <ul>
-                <li><a href="alista.html" target="_blank">Alista</a></li>
-                <li><a href="malphite.html" target="_blank">Malphite</a></li>
-                <li><a href="amumu.html" target="_blank">Amumu</a></li>
-                <li><a href="annie.html" target="_blank">Annie</a></li>
-                <li><a href="janna.html" target="_blank">Janna</a></li>
-                <li><a href="jax.html" target="_blank">Jax</a></li>
-                <li><a href="kayle.html" target="_blank">Kayle</a></li>
-                <li><a href="master yi.html" target="_blank"><Master Yi/a></li>
-                <li><a href="nasus.html" target="_blank">Nasus</a></li>
-                <li><a href="ryze.html" target="_blank">Ryze</a></li>
-                <li><a href="soraka.html" target="_blank">Soraka</a></li>
-                    <li><a href="teemo.html" target="_blank">Teemo</a></li>
-                    <li><a href="tryndamere.html" target="_blank">Tryndamere</a></li>
-                    <li><a href="wukong.html" target="_blank">Wukong</a></li>
-                
+                <li><a href="/HTML/champions/alista.html" target="_blank">Alista</a></li>
+                <li><a href="/HTML/champions/malphite.html" target="_blank">Malphite</a></li>
+                <li><a href="/HTML/champions/amumu.html" target="_blank">Amumu</a></li>
+                <li><a href="/HTML/champions/annie.html" target="_blank">Annie</a></li>
+                <li><a href="/HTML/champions/janna.html" target="_blank">Janna</a></li>
+                <li><a href="/HTML/champions/jax.html" target="_blank">Jax</a></li>
+                <li><a href="/HTML/champions/kayle.html" target="_blank">Kayle</a></li>
+                <li><a href="/HTML/champions/master yi.html" target="_blank">Master Yi</a></li>
+                <li><a href="/HTML/champions/nasus.html" target="_blank">Nasus</a></li>
+                <li><a href="/HTML/champions/ryze.html" target="_blank">Ryze</a></li>
+                <li><a href="/HTML/champions/soraka.html" target="_blank">Soraka</a></li>
+                <li><a href="/HTML/champions/teemo.html" target="_blank">Teemo</a></li>
+                <li>
+                    <a href="/HTML/champions/tryndamere.html" target="_blank">Tryndamere</a>
+                </li>
+                <li><a href="/HTML/champions/wukong.html" target="_blank">Wukong</a></li>
             </ul>
         </div>
     </body>
