guide.html updata

--- a/HTML/champions/akali.html
+++ b/HTML/champions/akali.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Alista</title>
+        <link rel="stylesheet" href="/CSS/champhtml.css" />
+        <link rel="images" href="/images/" />
+    </head>
+
+
 <h1 id="akali-akali-https-static-wikia-nocookie-net-leagueoflegends-images-6-6a-akali_originalsquare-png-revision-latest-scale-to-width-down-42-cb-20180726202056-">AKALI <img 
     src="/images/champ icon/AkaliSquare.webp" alt="akali"></h1>
 <p>Abandoning the Kinkou Order and her title of the Fist of Shadow, Akali now strikes alone, ready to be the deadly weapon her people need. Though she holds onto all she learned from her master Shen, 
