--- a/HTML/champions/azir.html
+++ b/HTML/champions/azir.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Alista</title>
+        <link rel="stylesheet" href="/CSS/champhtml.css" />
+        <link rel="images" href="/images/" />
+    </head>
+
+
 <h1 id="azir-azir-https-static-wikia-nocookie-net-leagueoflegends-images-7-77-azir_originalsquare-png-revision-latest-scale-to-width-down-42-cb-20150402215409-">AZIR <img 
     src="/images/champ icon/AzirSquare.webp" alt="azir"></h1>
 <p>Azir was a mortal emperor of Shurima in a far distant age, a proud man who stood at the cusp of immortality. His hubris saw him betrayed and murdered at the moment of his greatest triumph, but now, millennia later, he has been reborn as an Ascended being of immense power. 
