--- a/HTML/champions/blitzcrank.html
+++ b/HTML/champions/blitzcrank.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Alista</title>
+        <link rel="stylesheet" href="/CSS/champhtml.css" />
+        <link rel="images" href="/images/" />
+    </head>
+
+
+
 <h1 id="blitzcrank-blitzcrank-https-static-wikia-nocookie-net-leagueoflegends-images-a-ac-blitzcrank_originalsquare-png-revision-latest-scale-to-width-down-42-cb-20150402215457-">BlITZCRANK <img 
     src="/images/champ icon/BlitzcrankSquare.webp" alt="blitzcrank"></h1>
 <p>Blitzcrank is an enormous, near-indestructible automaton from Zaun, originally built to dispose of hazardous waste. However, he found this primary purpose too restricting, and modified his own form to better serve the fragile people of the Sump. 
