--- a/HTML/champions/camille.html
+++ b/HTML/champions/camille.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Alista</title>
+        <link rel="stylesheet" href="/CSS/champhtml.css" />
+        <link rel="images" href="/images/" />
+    </head>
+
+
 <h1 id="camille-camille-https-static-wikia-nocookie-net-leagueoflegends-images-0-0d-camille_originalsquare-png-revision-latest-scale-to-width-down-42-cb-20170217185322-">CAMILLE <img 
     src="/images/champ icon/CamilleSquare.webp" alt="camille"></h1>
 <p>Weaponized to operate outside the boundaries of the law, Camille is the Principal Intelligencer of Clan Ferros—an elegant and elite agent who ensures the Piltover machine and its Zaunite underbelly runs smoothly. 
