--- a/HTML/champions/darius.html
+++ b/HTML/champions/darius.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Alista</title>
+        <link rel="stylesheet" href="/CSS/champhtml.css" />
+        <link rel="images" href="/images/" />
+    </head>
+
+
 <h1 id="darius-darius-https-static-wikia-nocookie-net-leagueoflegends-images-5-59-darius_originalsquare-png-revision-latest-scale-to-width-down-42-cb-20160412191052-">DARIUS <img 
     src="/images/champ icon/DariusSquare.webp" alt="darius"></h1>
 <p>There is no greater symbol of Noxian might than Darius, the nation&#39;s most feared and battle-hardened commander. Rising from humble origins to become the Hand of Noxus, 
