--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -43,6 +43,14 @@
             <div class="champion-list">
 
                 <a href="/HTML/champions/alista.html" class="champion-item">Alista</a>
+                <a href="/HTML/champions/ahri.html" class="champion-item">Ahri</a>
+                <a href="/HTML/champions/akali.html" class="champion-item">Akali</a>
+                <a href="/HTML/champions/aphelios.html" class="champion-item">Aphelios</a>
+                <a href="/HTML/champions/ashe.html" class="champion-item">Ashe</a>
+                <a href="/HTML/champions/azir.html" class="champion-item">Azir</a>
+                <a href="/HTML/champions/blitzcrank.html" class="champion-item">Blitzcrank</a>
+                <a href="/HTML/champions/camille.html" class="champion-item">Camille</a>
+                <a href="/HTML/champions/darius.html" class="champion-item">Darius</a>
             
                 <a href="/HTML/champions/malphite.html" class="champion-item">Malphite</a>
             
