--- a/HTML/champions/ahri.html
+++ b/HTML/champions/ahri.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Alista</title>
+        <link rel="stylesheet" href="/CSS/champhtml.css" />
+        <link rel="images" href="/images/" />
+    </head>
+
+
 <h1 id="ahri-ahri-https-static-wikia-nocookie-net-leagueoflegends-images-2-2a-ahri_originalsquare-png-revision-latest-scale-to-width-down-42-cb-20230201172235-">AHRI <img 
     src="/images/champ icon/Ahri_OriginalSquare.webp" alt="ahri"></h1>
 <p>Innately connected to the magic of the spirit realm, Ahri is a fox-like vastaya who can manipulate her prey&#39;s emotions and consume their essence—receiving flashes of their memory and insight from each soul she consumes. Once a powerful yet wayward predator, Ahri is now traveling the world in search of remnants of her ancestors while also trying to replace her stolen memories with ones of her own making.</p>
