--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Document</title>
         <link rel="stylesheet" href="CSS/styles.css" />
+        <link
+            href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+            rel="stylesheet"
+        />
     </head>
     <div class="header">
         <video autoplay loop muted plays-inline class="back-video">
@@ -15,7 +19,7 @@
             />
         </video>
         <nav>
-            <img src="/images/sgDividerIcon.png" class="logo" />
+            <img src="/images/mainlogo.png" class="logo" />
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="HTML/blog.html">BLOG</a></li>
@@ -386,8 +390,41 @@
             <div class="dividerlinebottom"></div>
         </div>
 
-        <div class="footer">
-            <p>This is a footer</p>
-        </div>
+        <footer class="game-footer">
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img
+                        src="/images/mainlogo.png"
+                        alt="Game Logo"
+                        class="logo"
+                    />
+                    <p>&copy; 2024 NexusNews. All Rights Reserved.</p>
+                </div>
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="terms.html">Terms of Service</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <div class="social">
+                        <a href="#" title="Facebook"
+                            ><i class="bx bxl-facebook"></i
+                        ></a>
+                        <a href="#" title="Twitter"
+                            ><i class="bx bxl-twitter"></i
+                        ></a>
+                        <a href="#" title="Instagram"
+                            ><i class="bx bxl-instagram-alt"></i
+                        ></a>
+                        <a href="#" title="LinkedIn"
+                            ><i class="bx bxl-linkedin-square"></i
+                        ></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
