--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -428,16 +428,42 @@
             <!-- POST ENDS-->
         </section>
 
-        <!-- Footer -->
-        <div class="footer container">
-            <p>&#169; NexusNews All Rights Reserved</p>
-            <div class="social">
-                <a href="#"><i class="bx bxl-facebook"></i></a>
-                <a href="#"><i class="bx bxl-twitter"></i></a>
-                <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-                <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+        <footer class="game-footer">
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img
+                        src="/images/mainlogo.png"
+                        alt="Game Logo"
+                        class="logo"
+                    />
+                    <p>&copy; 2024 NexusNews. All Rights Reserved.</p>
+                </div>
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="terms.html">Terms of Service</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <div class="social">
+                        <a href="#" title="Facebook"
+                            ><i class="bx bxl-facebook"></i
+                        ></a>
+                        <a href="#" title="Twitter"
+                            ><i class="bx bxl-twitter"></i
+                        ></a>
+                        <a href="#" title="Instagram"
+                            ><i class="bx bxl-instagram-alt"></i
+                        ></a>
+                        <a href="#" title="LinkedIn"
+                            ><i class="bx bxl-linkedin-square"></i
+                        ></a>
+                    </div>
+                </div>
             </div>
-        </div>
+        </footer>
 
         <!-- JQuery Link-->
         <script
