Guides champion icon selection complete

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -17,7 +17,7 @@
             </video>
         </div>
         <nav>
-            <img src="/images/sgDividerIcon.png" class="logo" />
+            <img src="/images/mainlogo.png" class="logo" />
             <ul>
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/HTML/blog.html">BLOG</a></li>
