--- a/HTML/esports.html
+++ b/HTML/esports.html
@@ -3,24 +3,37 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Document</title>
-        <link rel="stylesheet" href="/CSS/styles.css" />
+        <link rel="stylesheet" href="/CSS/esports.css" />
+        <link
+            href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+            rel="stylesheet"
+        />
     </head>
-    <body>
-        <div class="header">
-            <nav>
-                <img src="/images/sgDividerIcon.png" class="logo" />
-                <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/HTML/blog.html">BLOG</a></li>
-                    <li><a href="/HTML/esports.html">ESPORTS</a></li>
-                    <li><a href="/HTML/guides.html">GUIDES</a></li>
-                    <li><a href="/HTML/about.html">ABOUT</a></li>
-                </ul>
-            </nav>
+    <div class="header">
+        <video autoplay loop muted plays-inline class="back-video">
+            <source
+                src="/images/Aurelion Sol, the Star Forger _ Login Screen - League of Legends.mp4"
+                type="video/mp4"
+            />
+        </video>
+        <nav>
+            <img src="/images/mainlogo.png" class="logo" />
+            <ul>
+                <li><a href="/index.html">HOME</a></li>
+                <li><a href="/HTML/blog.html">BLOG</a></li>
+                <li><a href="/HTML/esports.html">ESPORTS</a></li>
+                <li><a href="/HTML/guides.html">GUIDES</a></li>
+                <li><a href="/HTML/about.html">ABOUT</a></li>
+            </ul>
+        </nav>
+        <div class="main1">
+            <p>Learn by watching professionals</p>
+            <h1>eSports</h1>
         </div>
-        <body>
-
+    </div>
+    <body>
         <main>This is the esports page</main>
     </body>
 </html>
