--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -17,7 +17,7 @@
                 <source src="/images/StarGuardianIntro.mp4" type="video/mp4" />
             </video>
             <nav>
-                <img src="/images/sgDividerIcon.png" class="logo" />
+                <img src="/images/mainlogo.png" class="logo" />
                 <ul>
                     <li><a href="/index.html">HOME</a></li>
                     <li><a href="/HTML/blog.html">BLOG</a></li>
