Guids Page complete

--- a/HTML/guides.html
+++ b/HTML/guides.html
@@ -8,6 +8,12 @@
     </head>
     <body>
         <div class="header">
+            <video autoplay loop muted plays-inline class="back-video">
+                <source
+                    src="/images/[NA] MSI 2018 ｜ Login Screen - League of Legends (featuring Danger).mp4"
+                    type="video/mp4"
+                />
+            </video>
             <nav>
                 <img src="/images/mainlogo.png" class="logo" />
                 <ul>
@@ -18,13 +24,15 @@
                     <li><a href="/HTML/about.html">ABOUT</a></li>
                 </ul>
             </nav>
+            <div class="main1">
+                <p>Champion information, critics, and item selection</p>
+                <h1>Guides</h1>
+            </div>
         </div>
-
-        <div class="main1">
-            <p>Champion information, critics, and item selection</p>
-            <h1>Guides</h1>
+        <div class="divider">
+            <div class="dividerlinetop"></div>
+            <div class="dividerlinebottom"></div>
         </div>
-
         <div class="divider">
             <div class="dividerlinetop"></div>
             <div class="dividericon">
